// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Login Component renders correctly 1`] = `
<div>
  <Nav
    cart={Array []}
    component=""
    onModal={[Function]}
  />
  <div
    className="register-container"
    id="login-bg"
  >
    <div
      className="register-wrapper"
      style={
        Object {
          "margin": "100px 25% 100px 25%",
        }
      }
    >
      <h2
        className="login-header"
      >
        Login
      </h2>
      <br />
      <h3
        className="text-center danger"
      />
      <h3
        className="text-center danger"
      />
      <form
        action="dashboard.html"
        className="login"
      >
        <div
          className="form-field"
        >
          <span
            className="text-center danger"
          />
          <input
            id="username"
            name="username"
            onChange={[Function]}
            placeholder="Username"
            required={true}
            type="text"
          />
        </div>
        <div
          className="form-field"
        >
          <span
            className="text-center danger"
          />
          <input
            id="password"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required={true}
            type="password"
          />
        </div>
         
        <br />
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="button lg-btn"
            name="submit"
            onClick={[Function]}
            type="submit"
          >
            Login
             
          </button>
        </div>
         
        <br />
        <div
          className="form-field"
        >
          <Link
            replace={false}
            to="/register"
          >
            SignUp
          </Link>
              
          <Link
            replace={false}
            to="/resetLink"
          >
            forgot password? 
          </Link>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test Login Component should recieve error message props with wrong credentials 1`] = `
<div>
  <Nav
    cart={Array []}
    component=""
    onModal={[Function]}
  />
  <div
    className="register-container"
    id="login-bg"
  >
    <div
      className="register-wrapper"
      style={
        Object {
          "margin": "100px 25% 100px 25%",
        }
      }
    >
      <h2
        className="login-header"
      >
        Login
      </h2>
      <br />
      <h3
        className="text-center danger"
      />
      <h3
        className="text-center danger"
      />
      <form
        action="dashboard.html"
        className="login"
      >
        <div
          className="form-field"
        >
          <span
            className="text-center danger"
          />
          <input
            id="username"
            name="username"
            onChange={[Function]}
            placeholder="Username"
            required={true}
            type="text"
          />
        </div>
        <div
          className="form-field"
        >
          <span
            className="text-center danger"
          />
          <input
            id="password"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required={true}
            type="password"
          />
        </div>
         
        <br />
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="button lg-btn"
            name="submit"
            onClick={[Function]}
            type="submit"
          >
            Login
             
          </button>
        </div>
         
        <br />
        <div
          className="form-field"
        >
          <Link
            replace={false}
            to="/register"
          >
            SignUp
          </Link>
              
          <Link
            replace={false}
            to="/resetLink"
          >
            forgot password? 
          </Link>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test Login Component should recieve error message props with wrong credentials 2`] = `
<div>
  <Nav
    cart={Array []}
    component=""
    onModal={[Function]}
  />
  <div
    className="register-container"
    id="login-bg"
  >
    <div
      className="register-wrapper"
      style={
        Object {
          "margin": "100px 25% 100px 25%",
        }
      }
    >
      <h2
        className="login-header"
      >
        Login
      </h2>
      <br />
      <h3
        className="text-center danger"
      >
        Wrong credentials
      </h3>
      <h3
        className="text-center danger"
      />
      <form
        action="dashboard.html"
        className="login"
      >
        <div
          className="form-field"
        >
          <span
            className="text-center danger"
          />
          <input
            id="username"
            name="username"
            onChange={[Function]}
            placeholder="Username"
            required={true}
            type="text"
          />
        </div>
        <div
          className="form-field"
        >
          <span
            className="text-center danger"
          />
          <input
            id="password"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required={true}
            type="password"
          />
        </div>
         
        <br />
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="button lg-btn"
            name="submit"
            onClick={[Function]}
            type="submit"
          >
            Login
             
          </button>
        </div>
         
        <br />
        <div
          className="form-field"
        >
          <Link
            replace={false}
            to="/register"
          >
            SignUp
          </Link>
              
          <Link
            replace={false}
            to="/resetLink"
          >
            forgot password? 
          </Link>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test Login Component should respond to change event and change the state of the Login Component 1`] = `
<div>
  <Nav
    cart={Array []}
    component=""
    onModal={[Function]}
  />
  <div
    className="register-container"
    id="login-bg"
  >
    <div
      className="register-wrapper"
      style={
        Object {
          "margin": "100px 25% 100px 25%",
        }
      }
    >
      <h2
        className="login-header"
      >
        Login
      </h2>
      <br />
      <h3
        className="text-center danger"
      >
        Wrong credentials
      </h3>
      <h3
        className="text-center danger"
      />
      <form
        action="dashboard.html"
        className="login"
      >
        <div
          className="form-field"
        >
          <span
            className="text-center danger"
          >
            Username is required
          </span>
          <input
            id="username"
            name="username"
            onChange={[Function]}
            placeholder="Username"
            required={true}
            type="text"
          />
        </div>
        <div
          className="form-field"
        >
          <span
            className="text-center danger"
          >
            Password is required
          </span>
          <input
            id="password"
            name="password"
            onChange={[Function]}
            placeholder="Password"
            required={true}
            type="password"
          />
        </div>
         
        <br />
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="button lg-btn"
            name="submit"
            onClick={[Function]}
            type="submit"
          >
            Login
             
          </button>
        </div>
         
        <br />
        <div
          className="form-field"
        >
          <Link
            replace={false}
            to="/register"
          >
            SignUp
          </Link>
              
          <Link
            replace={false}
            to="/resetLink"
          >
            forgot password? 
          </Link>
        </div>
      </form>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test Login Component should respond to mapDispatchToProps methods 1`] = `
Object {
  "actions": Object {
    "changePassword": [Function],
    "clearMessages": [Function],
    "getNotifications": [Function],
    "getUser": [Function],
    "loadErrorMessage": [Function],
    "loadNotifications": [Function],
    "loadSuccessMessage": [Function],
    "loadUser": [Function],
    "login": [Function],
    "refreshToken": [Function],
    "register": [Function],
    "resetLink": [Function],
    "updateProfile": [Function],
    "upgrade": [Function],
  },
}
`;

exports[`Test Login Component should respond to mapStateToProps methods 1`] = `
Object {
  "errorMessage": Object {
    "loginError": "Wrong credentials",
  },
}
`;
